--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -4,24 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button #myButton>BUTTON</ion-button>
+        <ion-button fill="outline" #myButton>BUTTON</ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-item>
-          <ion-radio #myRadio LabelPlacement="end">Radio</ion-radio>
+        <ion-item lines="none">
+          <ion-label>Radio</ion-label>
+          <ion-radio slot="end" #myRadio></ion-radio>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="6">
-        <ion-button>FOCUS BUTTON</ion-button>
+        <ion-button (click)="focusButton()">FOCUS BUTTON</ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button>FOCUS RADIO</ion-button>
+        <ion-button (click)="focusRadio()">FOCUS RADIO</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
